objects/LH__Lookup_Helper_App_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>LH__Exception_Monitor_Can_Disable_Settings__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Allows the Lookup Helper Exception Monitor to automatically disable settings that are causing an error.</description>
        <inlineHelpText>Allows the Lookup Helper Exception Monitor to automatically disable settings that are causing an error.</inlineHelpText>
        <label>Exception Monitor Can Disable Settings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LH__Max_FlexQueue_Utilization_Pct__c</fullName>
        <label>Max Flex Queue Utilization Percent</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LH__Prevent_Setting_Deactivation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this is checked Lookup Helper will not disable lookups when errors are encountered during both manual and realtime runs.</description>
        <inlineHelpText>If this is checked Lookup Helper will not disable lookups when errors are encountered during both manual and realtime runs.</inlineHelpText>
        <label>Prevent Automatic Setting Deactivation?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LH__Record_Scope__c</fullName>
        <label>Record Scope</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LH__Trigger_Deployments_Run_Tests__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this is checked all local tests will run during realtime trigger deployments. If left unchecked only the realtime trigger test will run.</description>
        <label>Run All Local Tests on Trigger Creation?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LH__emailToSendExceptions__c</fullName>
        <inlineHelpText>Lookup Helper will send an email to the specified email address daily with a summary of exceptions that have occurred (no emails will be sent if this field is not populated).</inlineHelpText>
        <label>Email To Send Exceptions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Lookup Helper App Settings</label>
</CustomObject>